--- a/style.css
+++ b/style.css
@@ -1,9 +1,971 @@
 @charset "utf-8";
-h1 {
+html {
+  font-size: 100%;
+  scroll-behavior: smooth; /* スムーススクロール */
+}
+
+body {
+  font-family: fot-tsukuardgothic-std, sans-serif;
+  font-weight: bold;
+  /* background-image: url(../portfolio_ootani/カンプ書き出し/4x/fv_pc@4x-80.jpg); */
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
   font-family: fot-tsukuardgothic-std, sans-serif;
 }
 
-h2 {
-  font-family: zen-kaku-gothic-new, sans-serif;
-  font-weight: 700;
+img {
+  max-width: 100%;
 }
+
+li {
+  list-style: none;
+}
+
+/* h1 {
+  font-family: fot-tsukuardgothic-std, sans-serif;
+} */
+
+h2 {
+  font-family: fot-tsukuardgothic-std, sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+}
+
+/* ローディングアニメーション */
+.logo_img {
+  width: 100%;
+  height: 67px;
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  margin: 25% auto;
+}
+
+
+
+/* ヘッダー */
+.firstview {
+  background-image: url(../portfolio_ootani/カンプ書き出し/4x/fv_pc@4x-80.jpg);
+  height: 1683px;
+  text-align: center;
+  background-size: 100%;
+  width: 100%;
+}
+
+#header {
+  display: flex;
+  justify-content: space-between;
+  padding: 40px 0;
+  width: 90%;
+  margin: 0 auto;
+}
+
+#header ul{
+  display: flex;
+}
+
+#header li {
+  /* font-family: fot-tsukuardgothic-std, sans-serif;
+  font-size: 14px;
+  color: #fff;
+  margin-left: 35px; */
+}
+
+.top_nav li{
+  font-family: fot-tsukuardgothic-std, sans-serif;
+  font-size: 14px;
+  color: #fff;
+  margin-left: 35px;
+}
+
+.top_nav a {
+  font-family: fot-tsukuardgothic-std, sans-serif;
+  font-size: 14px;
+  color: #fff;
+  margin-left: 35px;
+}
+
+.top_nav a:hover {
+  transition: 0.5s;
+  background-image: url(../portfolio_ootani/カンプ書き出し/2x/グロナビ太陽_pc.svg);
+  background-size: contain; 
+  background-repeat: no-repeat;
+  background-position-x: 53px;
+  background-position-y: -5px;
+}
+
+.contents_area {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+/* mainvisual */
+
+#mainvisual h1 {
+  /* font-family:  zen-kaku-gothic-new, sans-serif;
+  font-weight: 700;
+  font-size: 39px;
+  text-align: center;
+  line-height: 73px; */
+  display: inline;
+  font-family:  zen-kaku-gothic-new, sans-serif;
+  font-size: 39px;
+  font-weight: 700;
+  line-height: 73px;
+  /* text-align: center; */
+  /* padding: 5px; */
+  background: linear-gradient(transparent 0%, #fff 0%);
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+}
+
+/* concept */
+
+#concept {
+  margin-bottom: 192px;
+}
+
+#concept .concept_title {
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 82px;
+}
+
+#concept p {
+  /* あれ？なんで明朝？ */
+  font-family: fot-tsukuardgothic-std, sans-serif; 
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 76px;
+  letter-spacing: 0.05px;
+  text-align: center;
+}
+
+/* profile */
+#profile {
+  background-color: #fff;
+  border: 1px solid #173E6A;
+  height: 392px;
+  display: flex;
+  width: 80%;
+  margin: 0 auto 241px;
+  border-radius: 21px;
+  position: relative;
+}
+
+.profile_img_area {
+  background-color: #173E6A;
+  width: 526px;
+  height: 351px;
+  position: absolute;
+  top: 21px;
+  left: -65px;
+}
+
+.profile_right {
+  width: 40%;
+  margin: auto;
+  position: absolute;
+  top: 45px;
+  right: 59px;
+}
+.profile_right_profile_page {
+  margin: auto;
+}
+
+#profile .name_area {
+  display: flex;
+  align-items: center;
+  gap: 30px; 
+  margin-bottom: 32px;
+}
+#profile .name_area_profile_page {
+  align-items: center;
+}
+
+#profile .name {
+  font-size: 33px;
+  font-weight: normal;
+}
+.name_profile_page {
+  font-size: 33px;
+  font-weight: normal;
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+#profile .english_name {
+  font-size: 18px;
+  font-weight: normal;
+}
+.english_name_profile_page {
+  font-size: 18px;
+  font-weight: normal;
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+.profile_text p {
+  /* あれ？なんで明朝？ */
+  font-family: fot-tsukuardgothic-std, sans-serif; 
+  font-size: 14px;
+  line-height: 28.5px;
+}
+
+.profile_btn01 {
+  background-color: #173E6A; /* 背景色 */
+  color: white; /* 文字色 */
+  padding: 20px 37px; /* パディング */
+  font-family: zen-kaku-gothic-new, sans-serif;
+  text-align: center; /* 文字のアライメント */
+  text-decoration: none; /* 文字装飾 */
+  display: inline-block; /* ボタンの表示方法 */
+  font-size: 18px; /* フォントサイズ */
+  font-weight: bold;
+  margin: -276px auto; /* 外側の余白 */
+  cursor: pointer; /* カーソル */
+  border: none; /* ボーダーなし */
+  border-radius: 50px; /* 50pxの角丸 */
+  box-shadow: 0 0, 3px 4px 0 0 #fff, 3px 4px 0 1px #173E6A;
+  position: absolute;
+  right: 323px;
+  border-radius: 40px;
+}
+
+.profile_btn01:hover {
+  background-color: #3e8e41;
+  transition: all 0.5s ease;
+}
+
+.comment_area {
+  width: 60%;
+  display: flex;
+  margin: 0 auto ;
+  /* gap: 170px; */
+  justify-content: space-between;
+}
+
+.comment {
+  font-family: zen-kaku-gothic-new, sans-serif;
+  font-size: 23px;
+  font-weight: bold;
+}
+
+.profile_btn02 {
+  background-color: #FD6E50; /* 背景色 */
+  color: white; /* 文字色 */
+  padding: 40px 63px; /* パディング */
+  font-family: zen-kaku-gothic-new, sans-serif;
+  text-align: center; /* 文字のアライメント */
+  text-decoration: none; /* 文字装飾 */
+  display: inline-block; /* ボタンの表示方法 */
+  font-size: 36px; /* フォントサイズ */
+  font-weight: bold;
+  margin: 20px auto 247px; /* 外側の余白 */
+  cursor: pointer; /* カーソル */
+  border: none; /* ボーダーなし */
+  border-radius: 80px; 
+  box-shadow: 0 0, 5px 6px 0 0 #fff, 5px 6px 0 1px #FD6E50;
+}
+
+.profile_btn02:hover {
+  background-color: #3e8e41;
+  transition: all 0.5s ease;
+}
+
+/* works */
+
+#works {
+  margin-bottom: 225px;
+}
+
+#works h2 {
+  margin-bottom: 97px;
+}
+
+.works_area {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 80px;
+}
+
+.works_contents {
+}
+
+.works_img {
+  width: 500px;
+  height: 286px;
+  background-color: #fff;
+  margin-bottom: 25px;
+  border-radius: 36px;
+  border: solid 1px #173E6A;
+}
+
+.works_text {
+  font-size: 20px;
+  text-align: left;
+}
+
+.works_btn {
+  background-color: #173E6A; /* 背景色 */
+  color: white; /* 文字色 */
+  padding: 17px 62px; /* パディング */
+  font-family: fot-tsukuardgothic-std, sans-serif; 
+  text-align: center; /* 文字のアライメント */
+  text-decoration: none; /* 文字装飾 */
+  display: inline-block; /* ボタンの表示方法 */
+  font-size: 30px; /* フォントサイズ */
+  font-weight: normal;
+  margin-top: 92px;
+  cursor: pointer; /* カーソル */
+  border: none; /* ボーダーなし */
+  border-radius: 50px; /* 50pxの角丸 */
+  box-shadow: 0 0, 3px 4px 0 0 #fff, 3px 4px 0 1px #173E6A;
+}
+
+.works_btn:hover {
+  background-color: #3e8e41;
+  transition: all 0.5s ease;
+}
+
+/* skill */
+#skill {
+  background-color: #89CCE0;
+  padding: 116px 0 ;
+  margin: 0 calc(50% - 50vw);
+  width: 100vw;
+}
+
+#skill h2 {
+  margin-bottom: 110px;
+}
+
+.skill_area01 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 206px;
+}
+.skill_area01:nth-of-type(2) {
+  flex-direction: row-reverse;
+}
+.design_skill {
+  align-items: center;
+  padding: 30px;
+}
+.skill_title {
+  display: inline-block;
+  border: 1px solid #173E6A;
+  padding: 10px;
+  border-radius: 14px;
+  margin-bottom: 22px;
+}
+.skill_text {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.05px;
+  margin: 43px 30px;
+}
+
+.skill_img {
+  width: 375px;
+  height: 279px;
+  background-color: #173E6A;
+}
+
+#contact {
+  margin: 174px 0 221px;
+}
+
+#contact h2 {
+  margin-bottom: 60px;
+}
+
+#contact p {
+  margin-bottom: 54px;
+  line-height: 28px;
+}
+
+.contact_form {
+  display: flex;
+  margin-bottom: 18px;
+}
+
+.form_area {
+  background-color: lightgray;
+  width: 693px;
+  height: 66px;
+  border-radius: 16px;
+  padding: 24px 0 0 24px ;
+}
+
+
+
+/* レイアウト */
+form {
+  width: 70%;
+  margin: 0 auto;
+}
+.form-row {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  border-bottom: 1px solid #f2f4f5;
+}
+.form-row:last-child {
+  border-bottom: none;
+}
+.form-label {
+  display: flex;
+  align-items: center;
+  width: 250px;
+}
+.form-label label {
+  font-weight: bold;
+}
+.form-label span {
+  margin-left: 10px;
+  padding: 2px 6px;
+  border-radius: 3px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #166ab5;
+}
+
+
+
+
+
+/* フォームパーツのデザイン */
+input, textarea {
+  background-color: #f2f4f5;
+  border: none;
+  border-radius: 3px;
+  padding: 15px 20px;
+  font-size: 16px;
+  color: #333;
+  flex-grow: 1;
+}
+input::placeholder,
+textarea::placeholder {
+  color: #999;
+  font-size: 14px;
+}
+select {
+  background-color: #f2f4f5;
+  border: none;
+  border-radius: 3px;
+  padding: 15px 20px;
+  font-size: 16px;
+  color: #333;
+}
+button {
+  cursor: pointer;
+  margin-top: 30px;
+  padding: 15px 45px;
+  border: none;
+  border-radius: 3px;
+  color: #fff;
+  font-weight: bold;
+  background-color: #166ab5;
+}
+
+
+
+
+
+
+.contact_btn {
+  background-color: #173E6A; /* 背景色 */
+  color: white; /* 文字色 */
+  padding: 17px 62px; /* パディング */
+  font-family: fot-tsukuardgothic-std, sans-serif; 
+  text-align: center; /* 文字のアライメント */
+  text-decoration: none; /* 文字装飾 */
+  display: inline-block; /* ボタンの表示方法 */
+  font-size: 30px; /* フォントサイズ */
+  font-weight: normal;
+  margin-top: 92px;
+  cursor: pointer; /* カーソル */
+  border: none; /* ボーダーなし */
+  border-radius: 50px; /* 50pxの角丸 */
+  box-shadow: 0 0, 3px 4px 0 0 #fff, 3px 4px 0 1px #173E6A;
+}
+
+.contact_btn:hover {
+  background-color: #3e8e41;
+  transition: all 0.5s ease;
+}
+
+/* message */
+.message_area {
+  margin-bottom: 227px;
+  line-height: 28px;
+  position: relative;
+}
+
+/* #message p {
+  font-size: 16px;
+} */
+.thanks_sun_pc {
+  width: 106pc;
+  height: 95px;
+  position: absolute;
+  top: -62px;
+  right: -152px;
+}
+
+.para_2 {
+  margin-bottom: 80px;
+  font-family: zen-kaku-gothic-new, sans-serif;
+  font-weight: bold;
+  line-height: 32px;
+}
+
+
+/* footer */
+.copylight {
+  font-size: 10px;
+}
+
+/* プロフィールページ */
+.main_contents {
+  background-color: #FD6E50;
+  width: 100%;
+  height: 100px;
+}
+
+/* できないー */
+.profile_header li {
+  color: #173E6A;
+  font-family: fot-tsukuardgothic-std, sans-serif;
+}
+
+/* パララックスエリア */
+.parallax_content{
+  min-height: 400px;
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  font-family:  zen-kaku-gothic-new, sans-serif;
+}
+.parallax_content {
+  color: #FFF;
+  font-size: 36px;
+  font-weight: bold;
+  line-height: 63px;
+  text-align: left;
+  padding: 80px;
+}
+.front_wrapper{
+  padding: 50px;
+  background-color: #fff;
+  color: #FD6E50;
+  display: flex;
+  justify-content: space-between;
+}
+.front_content_area {
+  width: 49%;
+}
+.front_content_text {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 28px;
+}
+.parallax_content.img_bg_01{
+  background-image: url(../portfolio_ootani/自分＿ノーマル\ \(新\).jpg);
+}
+.parallax_content.img_bg_02{
+  background-image: url(../portfolio_ootani/自分＿びっくり（新）.jpg);
+}
+.parallax_content.img_bg_03{
+  background-image: url(../portfolio_ootani/自分＿メガネ\(新\).jpg);
+}
+
+.ribbon1 {
+  display: inline-block;
+  position: relative;
+  height: 50px;/*リボンの高さ*/
+  line-height: 50px;/*リボンの高さ*/
+  text-align: center;
+  padding: 0 40px;/*横の大きさ*/
+  font-size: 20px;/*文字の大きさ*/
+  font-family:  zen-kaku-gothic-new, sans-serif;
+  font-weight: bold;
+  background: #FD6E50;/*塗りつぶし色*/
+  color: #FFF;/*文字色*/
+  box-sizing: border-box;
+  margin-bottom: 24px;
+}
+
+.ribbon1:before, .ribbon1:after {
+  position: absolute;
+  content: '';
+  width: 0px;
+  height: 0px;
+  z-index: 1;
+}
+
+.ribbon1:before {
+  top: 0;
+  left: 0;
+  border-width: 25px 0px 25px 15px;
+  border-color: transparent transparent transparent #fff;
+  border-style: solid;
+}
+
+.ribbon1:after {
+  top: 0;
+  right: 0;
+  border-width: 25px 15px 25px 0px;
+  border-color: transparent #fff transparent transparent;
+  border-style: solid;
+}
+
+
+#profile_b {
+  background-color: #173E6A;
+  border: 1px solid #fff;
+  height: 392px;
+  display: flex;
+  margin: 0 auto 241px;
+  border-radius: 21px;
+}
+#profile_b .profile_right {
+  width: 100%;
+  text-align: center;
+}
+
+#profile_b .name_area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px; 
+  margin-bottom: 32px;
+  color: #fff;
+}
+
+#profile_b .name {
+  font-size: 33px;
+  font-weight: normal;
+}
+
+#profile_b .english_name {
+  font-size: 18px;
+  font-weight: normal;
+}
+
+#profile_b .profile_text p {
+  /* あれ？なんで明朝？ */
+  font-family: fot-tsukuardgothic-std, sans-serif; 
+  font-size: 14px;
+  line-height: 28.5px;
+  color: #fff;
+ margin: 0 auto;
+  width: 80%;
+}
+
+#me_and_design{
+  padding-bottom: 300px;
+  margin-bottom: 542px;
+}
+
+#me_and_design h2 {
+  margin-bottom: 80px;
+}
+.me_and_design_text {
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 32px;
+  font-family:  zen-kaku-gothic-new, sans-serif;
+}
+
+
+/* モバイルファーストのエリア */
+@import url('https://fonts.googleapis.com/css2?family=Arima:wght@500&display=swap');
+
+/*画像のうめこみ body {
+  background-image: url('https://images.unsplash.com/photo-1496661415325-ef852f9e8e7c?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NTgxMjQ5NDg&ixlib=rb-1.2.1&q=80');
+  background-size: cover;
+  background-attachment: fixed;
+} */
+/* h1, h2, h3 {
+  font-family: 'Arima', cursive;
+} */
+.container {
+  background: #fff;
+  /* 確認用box-shadow: 0 0 30px 3px rgba(110,90,70,.7); */
+  padding: 0 2rem 186px;
+  max-width: 350px;
+  margin: auto;
+}
+.container h2 {
+  margin-bottom: 104px;
+}
+.menu-icon {
+  width: 2rem;
+  height: 2rem;
+  fill: #fff;
+  background: #0bd;
+  padding: 1rem;
+  position: fixed;
+  right: 0;
+}
+
+.strong_point_box {
+  font-family:  zen-kaku-gothic-new, sans-serif;
+  font-weight: bold;
+  letter-spacing: 0.01em;
+    border-radius: 57px;
+    border: 2px dashed #B6DFEF;
+    margin-bottom: 45px;
+    padding: 36px 18px;
+}
+.strong_point_title {
+  font-size: 18px;
+  margin-bottom: 36px;
+}
+.strong_point_image_1 {
+  width: 148px;
+  height: 108px;
+  margin-bottom: 36px;
+}
+.strong_point_text {
+  font-size: 13px;
+  line-height: 23px;
+}
+
+.strong_point_image_2 {
+  width: 124px;
+  height: 117px;
+  margin-bottom: 36px;
+}
+
+.strong_point_image_3{
+  width: 108px;
+  height: 120px;
+  margin-bottom: 36px;
+}
+
+#profile_footer {
+  display: inline-flex;
+ flex-direction: column;
+}
+
+.footer_comment {
+  font-size: 14px;
+  font-family:  zen-kaku-gothic-new, sans-serif;
+  margin: 15px 0 160px;
+}
+
+@media (max-width:1900px){
+  .ham_nav{
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100vh;
+    /* background: rgba(0,0,0,0.9); */
+    background: rgba(182, 5, 5, 0.9);
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* 右からスライド */
+    transition: left 0.5s;
+  }
+  .ham_nav ul{
+    list-style:none;
+    display: flex;
+    flex-direction: column;
+  }
+  .ham_nav li:not(:last-child){
+    margin-bottom: 30px;
+  }
+  .ham_nav a{
+    color: #ffffff;
+    font-family: fot-tsukuardgothic-std, sans-serif; 
+  }
+}
+/* ナビゲーションボタン（開く） */
+#navbtn{
+  position: fixed;
+  top: 10px;
+  right: 12px;
+  padding: 0;
+  outline: none;
+  border: none;
+  background: none;
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+}
+
+#navbtn::before,
+#navbtn::after{
+  content : '';
+  display: block;
+  height: 1px;
+  background-color: #fff;
+  transform: translateY(10px);
+  transition: 0.3s ease-in-out;
+}
+
+#navbtn::before{
+  transform: translateY(-10px);
+  box-shadow: 0 10px #fff;
+}
+
+/* ナビゲーションボタン（閉じる） */
+.open #navbtn{
+  z-index: 100;
+}
+.open #navbtn::before{
+  transform: rotate(-45deg);
+  box-shadow: none;
+}
+.open #navbtn::after{
+  transform: rotate(45deg);
+  box-shadow: none;
+}
+/* ナビゲーションメニュー 開いた時*/
+.open .ham_nav{
+  left: 0;
+}
+
+/* works */
+.works_page {
+  margin-bottom: 120px;
+}
+.works_page h2 {
+  margin-bottom: 56px;
+}
+.works_page p {
+  margin-bottom: 100px;
+}
+
+/* detail 作品詳細 */
+.mockup_pc {
+  margin: 122px auto 80px;
+}
+
+
+
+.mockup_text_area {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 66px;
+  text-align: left;
+}
+.mockup_page_left {
+  width: 40%;
+}
+.mockup_page_right {
+  width: 50%;
+}
+.mockup_title {
+  font-size: 20px;
+  font-family:  zen-kaku-gothic-new, sans-serif;
+  margin-bottom: 18px;
+}
+.mockup_text {
+  font-size: 16px;
+  font-family:  zen-kaku-gothic-new, sans-serif;
+  font-weight: normal;
+  line-height: 28px;
+  margin-bottom: 46px;
+}
+.mockup_text:last-child {
+  margin-bottom: 0;
+}
+
+.screenshot {
+  display: flex;
+  justify-content: space-between;
+}
+.pc_screen {
+  width: 70%;
+  object-fit: contain;
+  border: 0.75px solid #B3B3B3;
+}
+.sp_screen {
+  width: 28%;
+  object-fit: contain;
+  border: 0.75px solid #B3B3B3;
+}
+
+/* 波形のコード */
+.text {
+  ...
+  transform: translateY(1px);/* ←ブラウザによって隙間ができるので入れている */
+}
+
+.u-pc {
+  display: none;
+}
+
+
+/* 波形のコードコピーしたらついてきた
+@media screen and (min-width: 768px) {
+  .u-pc {
+      display: block;
+  }
+
+  .u-sp {
+      display: none;
+  }
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
+@media screen and (max-width: 768px){
+  .parallax_content{
+    height: 100%;
+    background-image: none;
+  }
+  .parallax::before{
+    content: "";
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    -webkit-transform: translate3d(0, 0, -1px);
+    transform: translate3d(0, 0, -1px);
+    width: 100%;
+    min-hieght: 100%;
+    -webkit-background-size: cover;
+    background-size: cover;
+    z-index: -1;
+  }
+  .parallax_content.img_bg_01::before{
+    background-image: url();
+  }
+  .parallax_content.img_bg_02::before{
+    background-image: url();
+  }
+  .parallax_content.img_bg_03::before{
+    background-image: url();
+  }
+} */
