--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ h2 {
 /* ヘッダー */
 .firstview {
   background-image: url(./images/カンプ書き出し/4x/fv_pc@4x-80.jpg);
-  height: 1683px;
+  background-repeat: no-repeat;
+  height: 156vh;
   text-align: center;
   background-size: 100%;
   width: 100%;
@@ -61,14 +62,24 @@ h2 {
 #header {
   display: flex;
   justify-content: space-between;
-  padding: 18px 0 0 20px;
-  width: 90%;
+  padding: 14px 0 14px 18px;
+  width: 100%;
   margin: 0 auto;
   align-items: center;
+}
+#header.top_page_header {
+  width: 90%;
 }
 
 #header ul{
   display: flex;
+  width: 126%;
+  justify-content: space-between;
+}
+#header ul.top_header_ul {
+  display: flex;
+    width: 104%;
+    justify-content: space-between;
 }
 
 #header li {
@@ -80,13 +91,13 @@ h2 {
 
 .top_nav li{
   /* font-family: fot-tsukuardgothic-std, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   color: #fff; */
   margin-left: 35px;
 }
 .top_nav a {
   font-family: fot-tsukuardgothic-std, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   color: #fff;
 }
   /* display: block;
@@ -205,6 +216,7 @@ h2 {
 /* profile */
 .contents_area.profile_contents {
   width: 100%;
+  overflow-x: hidden;
 }
 #profile {
   background-color: #fff;
@@ -241,6 +253,7 @@ h2 {
 }
 
 #profile .name_area {
+  font-family: fot-tsukuardgothic-std, sans-serif;
   display: flex;
   align-items: center;
   gap: 30px; 
@@ -378,7 +391,7 @@ h2 {
 }
 .works_img img {
   object-fit:contain;
-  width:99%;
+  width:96%;
   height:100%;
   object-position: -29px 67%;
 }
@@ -389,6 +402,8 @@ h2 {
 
 
 .works_text {
+  font-family: fot-tsukuardgothic-std, sans-serif;
+  letter-spacing: 0.1rem;
   font-size: 20px;
   text-align: left;
 }
@@ -439,23 +454,32 @@ h2 {
 .design_skill {
   align-items: center;
   padding: 60px;
+  display: flex;
+  flex-direction: column;
 }
 .skill_title {
   display: inline-block;
+  font-family: fot-tsukuardgothic-std, sans-serif;
   border: 1px solid #173E6A;
+  letter-spacing: 0.1rem;
   padding: 10px;
-  border-radius: 14px;
+  border-radius: 16px;
   margin-bottom: 28px;
 }
 .skill_text {
+  font-family: fot-tsukuardgothic-std, sans-serif;
   font-weight: normal;
   font-size: 16px;
   line-height: 28px;
   letter-spacing: 0.05px;
   margin: 28px 30px;
+  letter-spacing: 0.1rem;
 }
 .skill_img.sp_img {
   display: none;
+}
+.sp_img:last-child {
+  width: 156px;
 }
 .skill_img.pc_img {
   width: 375px;
@@ -535,6 +559,8 @@ input, textarea {
   font-size: 16px;
   color: #333;
   flex-grow: 1;
+  letter-spacing: 0.08em;
+  line-height: 1.5em;
 }
 input::placeholder,
 textarea::placeholder {
@@ -635,6 +661,7 @@ button {
 /* footer */
 .copylight {
   font-size: 10px;
+  text-align: center;
 }
 
 /* プロフィールページ */
@@ -700,6 +727,7 @@ button {
   font-weight: bold;
   font-size: 16px;
   line-height: 28px;
+  letter-spacing: 0.15em;
 }
 .parallax_content.img_bg_01{
   text-align: end;
@@ -757,7 +785,7 @@ button {
 #profile_b {
   background-color: #173E6A;
   border: 1px solid #fff;
-  height: 392px;
+  padding: 5% 0;
   display: flex;
   margin: 0 auto 241px;
   border-radius: 21px;
@@ -787,7 +815,6 @@ button {
 }
 
 #profile_b .profile_text p {
-  /* あれ？なんで明朝？ */
   font-family: fot-tsukuardgothic-std, sans-serif; 
   font-size: 14px;
   line-height: 28.5px;
@@ -957,6 +984,7 @@ button {
 }
 .strong_point_text {
   font-size: 13px;
+  letter-spacing: 0.07em;
   line-height: 23px;
 }
 
@@ -986,12 +1014,14 @@ button {
 @media (max-width:1900px){
   .ham_nav{
     position: fixed;
+    z-index:1000;
     top: 0;
     left: 100%;
     width: 100%;
     height: 100vh;
     /* background: rgba(0,0,0,0.9); */
-    background: rgba(182, 5, 5, 0.9);
+    background: #173E6A;
+    opacity: 0.98;
     color: #ffffff;
     display: flex;
     justify-content: center;
@@ -1024,6 +1054,7 @@ button {
   width: 30px;
   height: 20px;
   cursor: pointer;
+  z-index: 500;
 }
 
 #navbtn::before,
@@ -1043,7 +1074,7 @@ button {
 
 /* ナビゲーションボタン（閉じる） */
 .open #navbtn{
-  z-index: 100;
+  z-index: 2000;
 }
 .open #navbtn::before{
   transform: rotate(-45deg);
@@ -1130,11 +1161,15 @@ button {
 .mockup_screen h2 {
   margin-bottom: 68px;
 }
-.screenshot {
+.screenshot_pc {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
 }
+.screenshot_sp {
+  align-items: flex-start;
+}
+
 .pc_screen {
   width: 70%;
   object-fit: contain;
@@ -1260,7 +1295,7 @@ button {
   }
   #wave_02.scroll-infinity {
     position: absolute;
-    top: -25px;
+    top: -26px;
     margin: 0 calc(50% - 50vw);
     width: 100vw;
   }
@@ -1442,6 +1477,15 @@ inview
   opacity: 1;
 }
 
+.fadeIn_up_a {
+  opacity: 0;
+  transform: translate(0, 50%);
+  transition: 14s;
+}
+.fadeIn_up_a.is-show {
+  transform: translate(0, 0);
+  opacity: 1;
+}
 /*===========
 .imgBox
 ===========*/
@@ -1474,18 +1518,6 @@ inview
 base
 ===========*/
 
-html {
-  margin: 0;
-  padding: 0;
-}
-body {
-  font-family: YuGothic, "游ゴシック体", "Yu Gothic", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-  font-size: 16px;
-  letter-spacing: .025em;
-  line-height: 1.8;
-  margin: 0;
-  padding: 0;
-}
 * {
   box-sizing: border-box;
 }
@@ -1565,18 +1597,6 @@ inview
 base
 ===========*/
 
-html {
-  margin: 0;
-  padding: 0;
-}
-body {
-  font-family: YuGothic, "游ゴシック体", "Yu Gothic", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-  font-size: 16px;
-  letter-spacing: .025em;
-  line-height: 1.8;
-  margin: 0;
-  padding: 0;
-}
 * {
   box-sizing: border-box;
 }
@@ -1609,20 +1629,49 @@ body {
   margin-right: 10px;
 }
 
+@media screen and (max-width: 1276px) {
+  .works_area {
+    justify-content: center;
+  }
+}
 
+@media screen and (min-width: 1024px) and (max-width: 1252px) {
+  #header ul {
+    width: 104%;
+  }
+  #profile {
+    width: 109%;
+  }
+  
+}
+@media screen and (max-width: 1024px)  {
+  #header ul {
+    width: 104%;
+  }
+  .top_nav a {
+    font-size: 16px;
+  }
+  #wave_02.scroll-infinity {
+    top: -18px;
+}
+}
 
-
-
+@media screen and (max-width: 976px) {
+  .top_nav {
+    display: none;
+  }
+  #wave_02.scroll-infinity {
+    top: -14px;
+}
+}
 
 
 
 @media screen and (max-width: 768px) {
   .firstview {
-    background-repeat: no-repeat;
+    height: 126vh;
   }
-  .top_nav {
-    display: none;
-  }
+
   #top_nav_ham {
     display: block;
   }
@@ -1630,6 +1679,9 @@ body {
     display: block;
   }
   
+  .ham_nav {
+    height: 110vh;
+  }
 
   #mainvisual h1 {
     -ms-writing-mode: tb-rl;
@@ -1728,6 +1780,10 @@ body {
   .works_area {
     justify-content: center;
   }
+  /* .works_img {
+    width: 85%;
+    margin: 0 auto 10px;
+  } */
 
   #wave_02.scroll-infinity {
     top: -13px;
@@ -1755,7 +1811,11 @@ body {
   display: inline-block;
   width: 170px;
   height: 126px;
+  margin: 0 auto 40px;
 }
+
+
+
 .skill_img.pc_img {
   display: none;
 }
@@ -1782,6 +1842,8 @@ body {
 input, textarea {
   font-size: 14px;
 }
+
+
 
 .contact_btn {
   font-size: 18px;
@@ -1835,6 +1897,10 @@ input, textarea {
 #me_and_design h2 {
   font-size: 24px;
 }
+.me_and_design_text {
+  width: 80%;
+    margin: 0 auto;
+}
 .me_and_design_text .para_2{
   font-size: 14px;
 }
@@ -1843,12 +1909,15 @@ input, textarea {
 }
 #ship_left {
   bottom: 288px;
+  left: 82px;
 }
 #ship_right {
   bottom: 288px;
+  right: 56px;
 }
 .ship_and_me {
   bottom: 328px;
+  right: 32px;
 }
 
 .container {
@@ -1895,15 +1964,90 @@ input, textarea {
 .mockup_text:last-child {
   margin-bottom: 40px;
 }
-
-
-
-
-
-
-
-
+@media screen and (min-width:375px) and ( max-width:768px) {
+  /*　画面サイズが768pxから1024pxまではここを読み込む　*/
+.firstview {
+  width: 110vw;
+  height: 140vh;
 }
+.works_area {
+  justify-content: center;
+}
+.works_img {
+  width: auto;
+}
+}
+
+
+
+
+@media screen and (max-width:375px) {
+  .firstview {
+    height: 100vh;
+  }
+  #header.top_page_header {
+    padding: 18px 0 0 0 ;
+  }
+  #navbtn {
+    right: 20px;
+  }
+  .works_img {
+    width: 100%;
+    margin: 0 auto 10px;
+  }
+  .works_img img {
+    width: 100%;
+    object-position: -18px 60%;
+  }
+  .works_text {
+    font-size: 14px;
+    margin: 0 10%;
+  }
+
+
+  .form-row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border-bottom: 1px solid #f2f4f5;
+  }
+  .form-label {
+  margin-bottom: 10px;
+  }
+
+     #ship_left {
+      display: none;
+     }
+     #profile_footer {
+      width: 78%;
+     }
+     .works_btn {
+      font-size: 16px;
+     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  }
+
+
+
+
+
+
+
 
 
 
