--- a/style.css
+++ b/style.css
@@ -38,14 +38,58 @@ h2 {
 }
 
 /* ローディングアニメーション */
-.logo_img {
+/* .logo_img {
   width: 100%;
   height: 67px;
   display: flex;
   justify-content: center;
   gap: 60px;
   margin: 25% auto;
+} */
+
+/*========= LoadingのためのCSS ===============*/
+
+/* Loading背景画面設定　*/
+#splash {
+  /*fixedで全面に固定*/
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 999;
+	background:#eee;
+	text-align:center;
+	color:#fff;
 }
+
+/* Loading画像中央配置　*/
+#splash_logo {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+/* Loading アイコンの大きさ設定　*/
+#splash_logo svg{
+    width:300px;
+}
+
+/*=============== SVGアニメーション内の指定 =================*/
+
+/*アニメーション前の指定*/
+#mask path {
+		fill-opacity: 0;/*最初は透過0で見えない状態*/
+		transition: fill-opacity .5s;/*カラーがつく際のアニメーション0.5秒で変化*/
+		fill: none;/*塗りがない状態*/
+		stroke: #333;/*線の色*/
+	}
+
+/*アニメーション後に.doneというクラス名がで付与された時の指定*/
+#mask.done path{
+	  fill: #333;/*塗りの色*/
+	  fill-opacity: 1;/*透過1で見える状態*/
+	  stroke: none;/*線の色なし*/
+	}
 
 
 
@@ -75,6 +119,7 @@ h2 {
   display: flex;
   width: 126%;
   justify-content: space-between;
+  text-align: center;
 }
 #header ul.top_header_ul {
   display: flex;
@@ -217,6 +262,7 @@ h2 {
 .contents_area.profile_contents {
   width: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 #profile {
   background-color: #fff;
@@ -842,6 +888,7 @@ button {
 }
 
 
+
 .ship {
   width: 114px;
   height: 74px;
@@ -849,35 +896,18 @@ button {
 }
 
 #ship_left {
-  position: absolute;
-  bottom: 350px;
-}
-#ship_right {
-  position: absolute;
-  bottom: 350px;
-  right: 10px;
-}
-.ship_and_me {
-  width: 64px;
+  width: 112px;
   object-fit: cover;
   position: absolute;
-  bottom: 397px;
-  right: -12px;
-  animation: poyopoyo 3s infinite;
-}
-.poyopoyo {
-  animation: poyopoyo 2s ease-out infinite;
-  opacity: 1;
+  right: 95px;
+  bottom: 72px;
+  animation: ship 3s infinite;
 }
 
-@keyframes poyopoyo {
-  0%, 40%, 60%, 80% {
-    transform: scale(1.0);
-  }
-  50%, 70% {
-    transform: scale(0.95);
-  }
+.wave_area {
+  position: relative;
 }
+
 
 
 
@@ -1480,7 +1510,7 @@ inview
 .fadeIn_up_a {
   opacity: 0;
   transform: translate(0, 50%);
-  transition: 14s;
+  transition: 8s;
 }
 .fadeIn_up_a.is-show {
   transform: translate(0, 0);
@@ -1635,14 +1665,13 @@ base
   }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1252px) {
+@media screen and (min-width: 1025px) and (max-width: 1252px) {
   #header ul {
     width: 104%;
   }
   #profile {
     width: 109%;
   }
-  
 }
 @media screen and (max-width: 1024px)  {
   #header ul {
@@ -1662,7 +1691,9 @@ base
   }
   #wave_02.scroll-infinity {
     top: -14px;
-}
+  }
+
+  
 }
 
 
@@ -1905,20 +1936,10 @@ input, textarea {
   font-size: 14px;
 }
 .me_and_design_text .para_2:last-child {
-  margin-bottom: 84px;
+  margin-bottom: 210px;
 }
-#ship_left {
-  bottom: 288px;
-  left: 82px;
 }
-#ship_right {
-  bottom: 288px;
-  right: 56px;
-}
-.ship_and_me {
-  bottom: 328px;
-  right: 32px;
-}
+
 
 .container {
   padding: 0 2rem 0px;
@@ -1976,8 +1997,8 @@ input, textarea {
 .works_img {
   width: auto;
 }
-}
 
+}
 
 
 
@@ -2016,9 +2037,6 @@ input, textarea {
   margin-bottom: 10px;
   }
 
-     #ship_left {
-      display: none;
-     }
      #profile_footer {
       width: 78%;
      }
@@ -2026,7 +2044,10 @@ input, textarea {
       font-size: 16px;
      }
 
-
+     .ribbon1 {
+      font-size: 13px;
+      padding: 0 26px;
+     }
 
 
 
